# Pong-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Config.h  Game.h
include/NeuralNetwork/: NNet.h  mat.h  vec.h
include/Objects/: Ball.h  Object.h  Pad.h
include/Ui/: Label.h
src/: Game.cpp  main.cpp
src/NeuralNetwork/: NNet.cpp  mat.cpp  vec.cpp
src/Objects/: Ball.cpp  Object.cpp  Pad.cpp
src/Ui/: Label.cpp
